[metadata]
name = sqlite_rx
version = 1.0.3
description = Python SQLite Client and Server
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sqlite, client, server, fast, secure
url = https://aosingh.github.io/sqlite_rx/
classifiers =
    Topic :: Database :: Database Engines/Servers
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
author = Abhishek Singh
author_email = abhishek.singh20141@gmail.com
maintainer = Abhishek Singh
maintainer_email = abhishek.singh20141@gmail.com

[options]
zip_safe = False
packages = find:
package_dir =
    sqlite_rx=sqlite_rx
include_package_data = True
scripts =
    bin/curve-keygen
install_requires =
    billiard==4.0.0
    msgpack==1.0.4
    pyzmq==23.1.0
    tornado==6.1
test_require =
    pytest==7.1.1
    coverage==6.3.2
python_requires = >=3.7

[options.packages.find]
where = sqlite_rx
exclude = tests

[options.entry_points]
console_scripts =
    sqlite-server = sqlite_rx.cli.server:main
    sqlite-client = sqlite_rx.cli.client:main

[options.extras_require]
cli =
    click==8.0.4
    rich==12.0.1
    pygments==2.11.2

[coverage:run]
branch = True
concurrency = multiprocessing
parallel = True
source = sqlite_rx
