[metadata]
name = sqlite_rx
version = 1.2.2
description = Python SQLite Client and Server
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sqlite, client, server, fast, secure
url = https://aosingh.github.io/sqlite_rx/
license = MIT License
classifiers =
    Topic :: Database :: Database Engines/Servers
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
author = Abhishek Singh
author_email = abhishek.singh20141@gmail.com
maintainer = Abhishek Singh
maintainer_email = abhishek.singh20141@gmail.com
project_urls =
    Documentation = https://aosingh.github.io/sqlite_rx/
    Source = https://github.com/aosingh/sqlite_rx
    Bug Tracker = https://github.com/aosingh/sqlite_rx/issues
    CI = https://github.com/aosingh/sqlite_rx/actions
    Release Notes = https://github.com/aosingh/sqlite_rx/releases
    License = https://github.com/aosingh/sqlite_rx/blob/master/LICENSE


[options]
zip_safe = False
packages = find:
package_dir =
    sqlite_rx=sqlite_rx
include_package_data = True
scripts =
    bin/curve-keygen
install_requires =
    billiard==4.2.1
    msgpack==1.1.0
    pyzmq==26.2.0
    tornado==6.4.1
test_require =
    pytest
    coverage
python_requires = >=3.8

[options.packages.find]
where = sqlite_rx
exclude = tests

[options.entry_points]
console_scripts =
    sqlite-server = sqlite_rx.cli.server:main
    sqlite-client = sqlite_rx.cli.client:main

[options.extras_require]
cli =
    click==8.1.7
    rich==13.9.3
    pygments==2.18.0

[coverage:run]
branch = True
concurrency = multiprocessing
parallel = True
source = sqlite_rx
